Fix grid alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,18 @@
 #grid {
     width: 960px;
+    background-color: #444646;
 }
 
 .cell {
-    background-color: blue;
+    background-color: #343e51;
     display: inline-block;
+    opacity: initial;
+    vertical-align: middle;
+    border-style: solid;
     border-color: black;
-    border-radius: 2px;
-    /*margin: 1px;
-   /*  height: 50px;
-    width: 50px; */
+    border-width: 1px;
 }
 
 .highlight {
-    background-color: red;
+    background-color: #dbecf5;
 }
